--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/omarieclaire/common#readme",
   "dependencies": {
+    "eslint": "^4.19.1",
     "firebase-tools": "^3.18.4"
   }
 }
