--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/omarieclaire/common#readme",
   "dependencies": {
     "eslint": "^4.19.1",
+    "firebase-admin": "^5.12.1",
     "firebase-tools": "^3.18.5"
   }
 }
