--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "nodemailer": "^4.6.5"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
