--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules/*
 .eslintrc.js
 firebase-debug.log
 serviceAccountKey.json
+functions/node_modules/*
+functions/gmail.json
+functions/serviceAccountKey.json
+functions/mailgun.json
